# test-ru-stream-regression

./: .travis.yml  README.md  makefile  test-ru-stream-regression.cabal
app/: Main.hs
data/: artist_data-short.csv  artist_data.csv
src/: Lib.hs
test/: LibSpec.hs
