name:                test-ru-stream-regression
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/ocramz/test-ru-stream-regression
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          example@example.com
copyright:           2017 Marco Zocca
category:            Regression
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , vector
                     , vector-algorithms

executable test-ru-stream-regression
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , test-ru-stream-regression

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , test-ru-stream-regression
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/test-ru-stream-regression
